table.user no longer uses text-align: center.

--- a/css/beige-red.css
+++ b/css/beige-red.css
@@ -273,7 +273,6 @@ td.history {
 
 table.user {
     border:      none;
-    text-align:  center;
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
     padding: 1em;
